--- a/uniRMC/uniRMC_pwa.html
+++ b/uniRMC/uniRMC_pwa.html
@@ -29,12 +29,13 @@ button{ box-shadow: 0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.
 
 
         .logbtn-left{
-      width:54px; padding:10px 0; text-align:center;
+      width:54px; padding:6px 0; text-align:center;
+      font-size:14px; line-height:1;
       border:1px solid rgba(255,255,255,.24);
-      box-shadow: 0 14px 26px rgba(0,0,0,.70),
-                  inset 0 1px 0 rgba(255,255,255,.12), inset 0 -6px 14px rgba(0,0,0,.40);
+      box-shadow: 0 12px 22px rgba(0,0,0,.65),
+                  inset 0 1px 0 rgba(255,255,255,.12), inset 0 -5px 12px rgba(0,0,0,.38);
     }
-    .logbtn-right{ width:110px; padding:10px 0; text-align:center; font-size:13px; letter-spacing:.3px; }
+    .logbtn-right{ width:110px; padding:6px 0; text-align:center; font-size:12px; line-height:1; letter-spacing:.3px; }
 
 
     /* Pressed feedback */
@@ -109,10 +110,11 @@ button{ box-shadow: 0 6px 14px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.
       box-shadow: 0 14px 26px rgba(0,0,0,.70), inset 0 1px 0 rgba(255,255,255,.12), inset 0 -6px 14px rgba(0,0,0,.40);
     }
     .logbtn-left{
-      width:54px; padding:10px 0; text-align:center;
+      width:54px; padding:6px 0; text-align:center;
+      font-size:14px; line-height:1;
       border:1px solid rgba(255,255,255,.24);
-      box-shadow: 0 14px 26px rgba(0,0,0,.70),
-                  inset 0 1px 0 rgba(255,255,255,.12), inset 0 -6px 14px rgba(0,0,0,.40);
+      box-shadow: 0 12px 22px rgba(0,0,0,.65),
+                  inset 0 1px 0 rgba(255,255,255,.12), inset 0 -5px 12px rgba(0,0,0,.38);
     }
 
 
@@ -331,8 +333,14 @@ main{ gap:10px; } /* was 12px */
   main{ padding-top:8px; padding-bottom:10px; gap:8px; } /* tighter between remotes only */
 }
 /* restore Log/Reset button sizing (keep original feel) */
-.logbtn-left{ width:54px !important; padding:10px 0 !important; font-size:14px !important; line-height:1 !important; }
-.logbtn-right{ width:110px !important; padding:10px 0 !important; font-size:13px !important; letter-spacing:.3px !important; }
+.logbtn-left{
+      width:54px; padding:6px 0; text-align:center;
+      font-size:14px; line-height:1;
+      border:1px solid rgba(255,255,255,.24);
+      box-shadow: 0 12px 22px rgba(0,0,0,.65),
+                  inset 0 1px 0 rgba(255,255,255,.12), inset 0 -5px 12px rgba(0,0,0,.38);
+    }
+.logbtn-right{ width:110px; padding:6px 0; text-align:center; font-size:12px; line-height:1; letter-spacing:.3px; }
 
 
 </style>
