--- a/myHome/myhome.html
+++ b/myHome/myhome.html
@@ -63,6 +63,7 @@
     .bottom{display:flex;gap:10px;padding:12px 12px 0;}
     .btn{flex:1;display:flex;align-items:center;justify-content:center;gap:10px;height:44px;border-radius:10px;border:1px solid var(--line);background:#fff;box-shadow:var(--shadow);font-weight:900;cursor:pointer;user-select:none;touch-action:manipulation;}
     .btn:active{transform:scale(.99);opacity:.92}
+    .btn svg{display:block}
     .mini{padding:10px 12px 0;color:var(--muted);font-size:11px;line-height:1.35}
 
     .backdrop{
@@ -129,8 +130,14 @@
     <div class="list" id="list"></div>
 
     <div class="bottom">
-      <div class="btn" id="btnRefresh2"><span>⟳</span><span>Refresh</span></div>
-      <div class="btn" id="btnLogout"><span>⏻</span><span>Logout</span></div>
+      <div class="btn" id="btnRefresh2"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+  <path d="M20 12a8 8 0 1 1-2.34-5.66" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+  <path d="M20 4v6h-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg><span>Refresh</span></div>
+      <div class="btn" id="btnLogout"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+  <path d="M12 2v10" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+  <path d="M7.5 4.8a8 8 0 1 0 9 0" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+</svg><span>Logout</span></div>
     </div>
 
     <div class="mini" id="mini">Auto refresh: 1800ms</div>
